--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
 
+
+<div class="outer-container">
+    <h1>Tech it easy</h1>
+    <section class="inner-container">
+        <article id="tvs-sold">Sold tv's</article>
+        <article id="tvs-originalStock"> Original Stock</article>
+        <article id="tvs-toBeSold"> Tv's Still to be sold</article>
+    </section>
+
+    <section>
+        <h2>Beschikbare Merken</h2>
+        <ul id="tv-brands"></ul>
+
+    </section>
+    <section>
+        <h2>Beschikbare modellen</h2>
+        <button></button>
+        <button></button>
+        <button></button>
+        <ul></ul>
+    </section>
+    <img id="tech-it-easy-logo" src="assets/tech_it_easy.png" alt="tech it easy logo">
+
+
+</div>
+
+
+<script src="main.js"></script>
+<script src="opdracht1.js"></script>
+<script src="opdracht2.js"></script>
+<script src="opdracht3.js"></script>
+<script src="opdracht4.js"></script>
+<script src="opdracht-bonus.js"></script>
+
 </body>
+
+
 </html>
