opdracht 4 en bonus poging 1

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="main.js"></script>
+    <script defer src="opdracht1.js"></script>
+    <script defer src="opdracht2.js"></script>
+    <script defer src="opdracht3.js"></script>
+    <script defer src="opdracht4.js"></script>
+    <script defer src="opdracht-bonus.js"></script>
+
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
@@ -19,14 +26,20 @@
     <section>
         <h2>Beschikbare Merken</h2>
         <ul id="tv-brands"></ul>
+        <h2 >Voorbeeld model</h2>
+        <div id="example-model"></div>
 
     </section>
+
+
+
     <section>
         <h2>Beschikbare modellen</h2>
-        <button></button>
-        <button></button>
-        <button></button>
-        <ul></ul>
+        <button type="button" id="sort-price-button">Sorteer op prijs</button>
+        <button type="button" id="filter-ambilight-button">TV's met Ambilight</button>
+        <button type="button" id="filter-sold-out-button">Uitverkochte Televisies</button>
+
+        <ul id="inventory-tv-list"></ul>
     </section>
     <img id="tech-it-easy-logo" src="assets/tech_it_easy.png" alt="tech it easy logo">
 
@@ -34,12 +47,6 @@
 </div>
 
 
-<script src="main.js"></script>
-<script src="opdracht1.js"></script>
-<script src="opdracht2.js"></script>
-<script src="opdracht3.js"></script>
-<script src="opdracht4.js"></script>
-<script src="opdracht-bonus.js"></script>
 
 </body>
 
