prijs hoog laag knop toegevoegd

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     <section>
         <h2>Beschikbare modellen</h2>
-        <button type="button" id="sort-price-button">Sorteer op prijs</button>
+        <button type="button" id="sort-price-button">Prijs laag naar hoog</button>
+        <button type="button" id="sort-price-button-high-low">Prijs hoog naar laag</button>
         <button type="button" id="filter-ambilight-button">TV's met Ambilight</button>
         <button type="button" id="filter-sold-out-button">Uitverkochte Televisies</button>
 
